# compilers_7_sem

./: README.md
compilers_7_sem_01_task/: app_O2.ll  app_O3.ll
compilers_7_sem_02_task/: README.md  app.c  build.sh  instr_logger.cpp  instr_tracer.cpp  stat_analyser.py  stat_pattern.txt
compilers_7_sem_03_task/: CMakeLists.txt  README.md  app_ir_gen.cpp  app_ir_gen.txt  sim.h
